<resources>
    <string name="app_name">Regreening Africa</string>
    <string name="btn_update">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No Data found</string>
    <string name="title_activity_splash">Splash</string>
    <string name="settings">Settings</string>
     <string name="version">
        <b>Regreening Africa App version 1.4.3</b>
    </string>
    <string-array name="countries">
        <item>Select Country first</item>
        <item>Kenya</item>
        <item>Ethiopia</item>
        <item>Rwanda</item>
        <item>Somalia</item>
        <item>Niger</item>
        <item>Ghana</item>
        <item>Senegal</item>
        <item>Mali</item>
        <item>Chad</item>
        <!--<item>Malawi</item>
        <item>Nigeria</item>
        <item>Uganda</item>
        <item>Tanzania</item>
        <item>Lesotho</item>
        <item>Burkina Faso</item>
        <item>Guinea</item>
        <item>Cape verde</item>
        <item>Ivory Coast</item>-->
    </string-array>
    <string-array name="county">
    <item>Select Country first</item>
    </string-array>
    <string-array name="district">
        <item>Select County first</item>
    </string-array>
    <string-array name="landsize">
        <item>Select Unit</item>
        <item>Hectares</item>
        <item>Acres</item>
    </string-array>
    <string-array name="projects">
        <item>Select Survey</item>
        <item>Regreening Africa</item>
        <item>Dry Dev</item>
        <!--<item>Other</item>-->
    </string-array>
    <string-array name="units">
        <item>Select Unit</item>
        <item>Kgs</item>
        <item>Grams</item>
        <item>Count</item>
        <!--<item>Other</item>-->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regreening_info">
    <b>Regreening africa app</b>\n\n
    Regreening Africa App is a mobile-based android application that helps users to collect information(Tree planting, nurseries and FMNR) on how farmers are managing and protecting trees on their farms.\n\n
    This application was developed under World Agroforestry Centre(ICRAF) Regreening Africa project, a project that targets to reverse land degradation in Africa by scaling up evergreen agriculture.\n
    </string>
    <string name="developers">
        <b>Developers/Designers</b>\n
        Benard Onkware(b.onkware@cgiar.org)\n Muhammad Ahmad(m.ahmad@cgiar.org) \n Tor Vagen(t.vagen@cgiar.org).\n
    </string>
    <string name="icons">
        <b>Icons</b>\n
        The icons used were downloaded from https://thenounproject.com/ .\n
    </string>
    <string name="contributors">
        <b>Contributors</b>\n
        The Regreening Africa Team.\n
    </string>
    <string name="url">
        <b>http://www.worldagroforestry.org/</b>
    </string>
    <string name="guide">
        <b>Regreening africa user Guide</b>
    </string>
    <string name="data_collection">
        <b>For data Collection</b>\n
        Follow the following steps;\n
        <b>1)</b> To start collecting data, Click on the <b>Start button</b>\n
        <b>2)</b> Select the type of survey you want to collect data on from one of the buttons\n
        <b>3)</b> Fill in the data, use <b>NEXT</b> or <b>PREV</b> for navigation through the screens.\n
    </string>
    <string name="Send_data">
        <b>For sending completed data</b>\n
        Follow this steps;\n
        <b>1)</b> Connect your device to the internet\n
        <b>2)</b> Click on <b>Send completed data</b> and select the completed filled data from one of the buttons\n
        <b>3)</b> Completed data will always show the number of records to be sent\n
    </string>
    <string name="tech_terms">
        <b>Technical terms</b>\n
        <b>Local seed dealer</b>-Seed dealer close to the farm\n
        <b>Internal boundary</b>-boundaries inside the plot\n
        <b>External boundary</b>-plots boundary\n
        <b>Fallow/bushland</b>-land ploughed and harrowed but left for a period without sown in to restore its fertility\n
        <b>Woodlot</b>-woodland or forest in small scale production of wood\n
        <b>Home garden</b>-Subsistence food production on the land next to the headfarm\n
        <b>Marcotting</b> also known as air layering is a type of plant propagation that involves rooting of part of a stem while it is still attached to the parent plant\n
    </string>
    <string name="select_plots">
        Is this a new farmer/Institution or an additional plot by the previous farmer/Institution?\n
    </string>
    <string name="title_activity_maps">Map</string>
</resources>
