<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_above="@+id/nav"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_margin="6dp"
            android:paddingRight="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/version"
                android:autoLink="all"
                android:layout_span="3"
                android:padding="15dip"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/regreening_info"
                android:autoLink="all"
                android:layout_span="3"
                android:padding="15dip"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/developers"
                android:autoLink="all"
                android:layout_span="3"
                android:padding="15dip"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/contributors"
                android:autoLink="all"
                android:layout_span="3"
                android:padding="15dip"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/icons"
                android:autoLink="all"
                android:layout_span="3"
                android:padding="15dip"
                android:textColor="#000"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/nav">

        <Button
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/n_back"
            android:text="PREV"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:enabled="false"
            android:drawableRight="@drawable/noun_next"
            android:text="NEXT"/>
    </LinearLayout>
</RelativeLayout>